--- a/examples/energy/charmm_chignolin.ipynb
+++ b/examples/energy/charmm_chignolin.ipynb
@@ -123,14 +123,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "1ce7217f-83cd-46ef-894b-de60090963d3",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Structure 138 atoms; 10 residues; 141 bonds; PBC (orthogonal); NOT parametrized>\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "326af604bf2f4c42875df6262b2bd6f9",
+       "model_id": "d70d6e08c33c4e1c9d983a6efe1b9348",
        "version_major": 2,
        "version_minor": 0
       },
@@ -143,14 +150,53 @@
     }
    ],
    "source": [
-    "pmd_chignolin = pmd.load_rdkit(chignolin)\n",
+    "pmd_chignolin = pmd.load_file(\"1uao.pdb\")\n",
+    "print(pmd_chignolin)\n",
     "pmd_chignolin.visualize()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "e6582bef-6b90-4b41-893b-229ab2c398ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'moleculekit'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [24]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorchmd_cg\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpsfwriter\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m pdb2psf_CA\n\u001b[1;32m      3\u001b[0m PDB_file \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata/chignolin_cln025.pdb\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      4\u001b[0m PSF_file \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata/chignolin_ca_top.psf\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "File \u001b[0;32m~/Documents/PhD_Year1_Summer/Research/idp_rl/examples/energy/torchmd_cg/utils/psfwriter.py:2\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmoleculekit\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmolecule\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Molecule\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorchmd_cg\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmappings\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CA_MAP, CACB_MAP\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpdb2psf_CA\u001b[39m(pdb_name_in, psf_name_out, bonds\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, angles\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m):\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'moleculekit'"
+     ]
+    }
+   ],
+   "source": [
+    "from torchmd_cg.utils.psfwriter import pdb2psf_CA\n",
+    "\n",
+    "PDB_file = 'data/chignolin_cln025.pdb'\n",
+    "PSF_file = 'data/chignolin_ca_top.psf'\n",
+    "\n",
+    "pdb2psf_CA(PDB_file, PSF_file, bonds = True, angles = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "aabe3382-9071-4a7e-8a00-d7dea30e2422",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pmd_chignolin.write_pdb(\"test.pdb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e2de72e-30fd-4188-9390-94dac5b1640b",
    "metadata": {},
    "outputs": [],
    "source": []
