Reorganized chignolin test files

--- a/examples/chignolin/charmm_chignolin.ipynb
+++ b/examples/chignolin/charmm_chignolin.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "9c85bf50-77d2-41e4-9dce-96565971e8c5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: importing 'simtk.openmm' is deprecated.  Import 'openmm' instead.\n"
+     ]
+    }
+   ],
    "source": [
     "from rdkit import Chem\n",
     "from rdkit.Chem import AllChem\n",
@@ -19,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "52e9892c-4673-4902-ba2c-ad7ea4544700",
    "metadata": {},
    "outputs": [],
@@ -45,14 +53,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "ecd2b313-0275-4b18-9f36-7c6e64ea33e2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a215157abc548e4bc0ce2192b4acb77",
+       "model_id": "e4a928cd7b0e41a6b432d3f8961232ce",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ccf21a525f6f443fac2fcd560aec679c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -71,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "42c1aa20-4867-4f7f-9594-83cededd7177",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b22f0bcd460c4b378de06f1b9dcca8b9",
+       "model_id": "51468ea883b24bd0873b417a3a7d876f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -99,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "57dc9573-7b7c-447f-939b-c81c4bf82bb2",
    "metadata": {},
    "outputs": [
@@ -107,8 +127,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23728.449183925397 kJ/mol\n",
-      "-1026.5461770214488 kJ/mol\n"
+      "22556.14986003448 kJ/mol\n",
+      "-1026.040988112954 kJ/mol\n"
      ]
     }
    ],
@@ -131,14 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "e70d146e-d171-44f4-9df5-c4f9026da10b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "625c0d1d650148fc968a717e89b62203",
+       "model_id": "511837f0deab48e3aee2712ed037f04e",
        "version_major": 2,
        "version_minor": 0
       },
